# Snake

./: CMakeLists.txt  CMakePresets.json  LICENSE
src/: Apple.cpp  AssetHandling.cpp  Game.cpp  Snake.cpp  Structures.cpp  Timer.cpp  main.cpp
src/headers/: Apple.hpp  AssetHandling.hpp  Game.hpp  GameSettings.hpp  Snake.hpp  Structures.hpp  TestH.h  Timer.hpp  Vector2.hpp
